--- a/builds/persistence-and-caching/knative-pvc/4_inferenceservice.yml
+++ b/builds/persistence-and-caching/knative-pvc/4_inferenceservice.yml
@@ -5,7 +5,6 @@ metadata:
   annotations:
     autoscaling.knative.dev/target: "10"
   name: llama3-8b-instruct-1xgpu
-  namespace: knim-knative-pvc
 spec:
   predictor:
     annotations:
@@ -24,6 +23,7 @@ spec:
         requests:
           nvidia.com/gpu: "1"
       runtime: nvidia-nim-llama3-8b-instruct-1.0.0
+      storageUri: oci://quay.io/xiezhang7/nim-meta-llama3-8b-instruct:hf-ngc
     nodeSelector:
       node.kubernetes.io/instance-type: p4d.24xlarge
     tolerations:
